[package]
name = "greenhouse"
version = "0.1.0"
edition = "2024"

[lints.clippy]
pedantic = "warn"

[dependencies]
color-eyre = "0.6.5"
derive_more = { version = "2.1.1", features = ["constructor", "deref", "display", "from"] }
rppal = "0.22.1"
schemars = "1.2.1"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
serde_yaml = "0.9.34"
tokio = { version = "1.50.0", features = ["full"] }
tracing = "0.1.44"
tracing-subscriber = "0.3.23"
