[package]
name = "greenhouse"
version = "1.0.0"
edition = "2024"
description = "Greenhouse controller for the Raspberry Pi"

[lints.clippy]
pedantic = "warn"
must_use_candidate = { level = "allow", priority = 1 }

[profile.release]
strip = true
lto = true
codegen-units = 1
panic = "abort"

[dependencies]
clap = { version = "4.6.0", features = ["derive"] }
color-eyre = "0.6.5"
derive_more = { version = "2.1.1", features = ["constructor", "deref", "display", "from"] }
futures = "0.3.32"
never = "0.1.0"
rppal = "0.22.1"
schemars = "1.2.1"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
serde_yaml = "0.9.34"
tokio = { version = "1.50.0", features = ["full"] }
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.23", features = ["env-filter"] }
